# diss-fl

./: .gitmodules  README.md  exp1.py  exp2.py  exp3.py  exp4.py  exp5_client.py  exp5_server.py  exp5_utils.py  exp6.py  exp6_utils.py  exp7.py  exp7_analysis.py  main.py  pyproject.toml  requirements.txt  run_exp1.sh  run_exp2.sh  sbatch  tfftutorialexp.py  utils.py
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_0/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_1/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_2/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_3/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_4/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_5/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_6/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_7/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_8/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavg_run_9/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavgm_run_0/: accs.npy  clip_norms.npy  losses.npy
exp2_results/clients_50_z_1_rounds_100_strategy_fedavgm_run_1/: accs.npy  clip_norms.npy  losses.npy
(+328 files in other folders)
