[tool.poetry]
name = "diss-fl"
version = "0.1.0"
description = ""
authors = ["Vasundhara Agarwal <vasundhara6999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flwr = {extras=["simulation"], path = "flower", develop = true }
torch = "1.7.1"
torchvision = "0.8.2"
tensorflow = "^2.5.0"
tensorflow-federated = "0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
